2004-05-09  Gert Driesen <drieseng@users.sourceforge.net>

	* AssemblyInfo.cs: Added
	* Consts.cs : Added
	* Locale.cs : Added
	* ChangeLog: Added