@@ -1,3 +1,8 @@
+2005-11-05  Kornél Pál  <kornelpal@hotmail.com>
+
+	* AssemblyInfo.cs: Use Consts.FxFileVersion as
+	  AssemblyInformationalVersion and AssemblyFileVersion.
+
 2004-05-09  Gert Driesen <drieseng@users.sourceforge.net>
 
 	* AssemblyInfo.cs: Added
